--- a/trabajo_final/main.ipynb
+++ b/trabajo_final/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 936,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 937,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 938,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 939,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 940,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 941,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,17 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 942,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Constante que define la imagen a tratar\n",
-    "FILENAME = \"data/texto_caras_imagen_0.jpg\"\n"
+    "FILENAME = \"data/texto_caras_codigos2.jpg\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 943,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 944,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 945,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 946,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 947,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 948,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 949,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 950,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 951,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
